# verna

./: .coveragerc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini  whitelist.py
src/verna/: __init__.py  verna.py
tests/: test_conversions.py  test_verna.py
