[tool.poetry]
name = "verna"
version = "0.0.1"
description = "A module to handle colors"
authors = ["Julin S"]
license = "MIT"
repository = "https://github.com/ju-sh/verna"
classifiers = [ ]
include = ["LICENSE.txt", "README.md"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
pylint = "^2.6.0"
flake8 = "^3.8.4"
vulture = "^2.1"
tox = "^3.20.1"
coverage = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
